# ai_1

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py  tool.py
app/akilli_arastirma_asistani.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
